--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,7 @@
 body {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100% !important; /*Added !important since about-modal sets a different value when activated*/
     left: 0px;
     top: 0px;
     background: #29B6F6;
