--- a/src/css/style.css
+++ b/src/css/style.css
@@ -182,17 +182,28 @@ main {
 #settings__update-checkbox {
     grid-row: 1;
 }
-#settings__target-slider {
+.update.ui.toggle.checkbox.input-tooltips {
+    margin-top: 10px;
+}
+#settings__input-tooltips-checkbox-text {
+    margin-top: 10px;
+    grid-column: 1/4;
     grid-row: 2;
+}
+#settings__input-tooltips-checkbox {
+    grid-row: 2;
+}
+#settings__target-slider {
+    grid-row: 3;
     grid-column: 2/4;
     margin-top: 10px;
 }
 #settings__target-text {
-    grid-row: 2;
+    grid-row: 3;
     margin-block-start: auto;
 }
 #settings__target-slider-text {
-    grid-row: 2;
+    grid-row: 3;
     margin-left: 10px;
     margin-block-start: auto;
     margin-block-end: auto;
@@ -227,12 +238,14 @@ main {
     display: inline-block;
 }
 .about-avatar {
-    width: 30px; 
-    height: 30px; 
+    width: 60px; 
+    height: 60px; 
     margin-right: 10px;
+    position: absolute;
 }
 .question-content, .reply-content {
     display: inline-block;
+    margin-left: 80px;
 }
 .about.metadata {
     font-size: smaller; 
